# cc-obs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: simple.md  with-hooks.md
.claude/hooks/: check_file.sh  format_file.sh
src/cc_obs/: cli.py  project.py  viewer.py
src/cc_obs/commands/: clear.py  install.py  install_prompt.py  log.py  status.py  view.py  wrap.py  wrap_agent.py
tests/: conftest.py  test_clear.py  test_install.py  test_install_prompt.py  test_log.py  test_project.py  test_status.py  test_view.py  test_wrap.py  test_wrap_agent.py
tests/fixtures/: sample_session.jsonl
