[project]
name = "cc-obs"
version = "0.1.0"
description = "Observability for Claude Code sessions"
requires-python = ">=3.12"
dependencies = ["pyyaml"]

[project.scripts]
cc-obs = "cc_obs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
